<resources>
    <string name="app_name">Lab8</string>
    <string name="add_item">增加条目</string>
    <string name="add">增加</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="gift">礼物</string>
    <string name="info_name">姓名: </string>
    <string name="info_birthday">生日: </string>
    <string name="info_gift">礼物: </string>
    <string name="giveup">放弃修改</string>
    <string name="change">保存修改</string>
    <string name="phone">手机号码: </string>
</resources>
